[package]
name = "akd_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
akd = { version = "0.11.0", features = ["whatsapp_v1", "parallel_vrf", "parallel_insert", "serde_serialization"] }
hex = "0.4"                # For hex encoding of root hashes
criterion = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
bincode = "1.3"

[[bench]]
harness = false
name = "whatsapp"
